--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
   "homepage": "https://bitbucket.org/shridhar_elango/shridhar_webtips_assignments#readme",
   "dependencies": {
     "axios": "^0.21.1",
-    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "nodemon": "^2.0.12",
-    "request": "^2.88.2"
+    "nodemon": "^2.0.12"
   }
 }
